--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,50 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <LINK REL=StyleSheet HREF="estilo.css" TYPE="text/css" MEDIA=screen>
-    <title>Document</title>
-
+    <LINK REL=StyleSheet HREF="css/estilo.css" TYPE="text/css" MEDIA=screen>
+    <title>Mi primera App</title>
 </head>
 
 <body>
-    <h1>TALLER 1</h1>
-
-    <header>
-        <nav>
-            <h2>LOGO</h2>
-            <section class="logo">
-            <h3>Registro Logo</h3>
-            <input type="text" placeholder="Search.."></section>
-            
-            <section class="menu">
-                <a href="">Inicio</a>
-                <a href="">Servicios</a>
-                <a href="">Portafolio</a>
-                <a href="">Clientes</a>
-                <a href="">Contactos</a>
-            </section>
-
+    <header class="cabecera_principal">
+        <h2>PLACE TREATS</h2>
+        <nav class="menuPrincipal">
+            <a href="">Inicio</a>
+            <a href="">Quienes somos</a>
+            <a href="">Reserva</a>
+            <a href="">Clientes</a>
+            <a href="">Contactos</a>
         </nav>
+    </header>
+    <section class="sliderprincipal">
+        <img src="images/slide1.jpg" alt="Slider" title="sliderprincipal">
+    </section>
+    <main>
 
-        <section class="galeria"> 
-            <h3>Galeria de Imagenes</h3>
+        <h2 class="h2Home">NOTICIAS</h2>
+        <section class="menu">
+            <article class="menuPlato">
+                <img src="images/plato1.jpg" alt="plato1" title="img1">
+                <h3>PICANTE DE MARISCOS</h3>
+                <p>Este plato copntiene una serie de alimentos saludables ricos en proteinas.</p>
+                <button>Ver detalle</button>
+            </article>
+            <article class="menuPlato">
+                <img src="images/plato1.jpg" alt="plato1" title="img1">
+                <h3>PICANTE DE MARISCOS</h3>
+                <p>Este plato copntiene una serie de alimentos saludables ricos en proteinas.</p>
+                <button>Ver detalle</button>
+            </article>
+            <article class="menuPlato">
+                <img src="images/plato1.jpg" alt="plato1" title="img1">
+                <h3>PICANTE DE MARISCOS</h3>
+                <p>Este plato copntiene una serie de alimentos saludables ricos en proteinas.</p>
+                <button>Ver detalle</button>
+            </article>
         </section>
 
-        <main>
-            <p>Noticia 1</p>
-            <p>Noticia 2</p>
-        </main>
+        <h2 class="h2Home">NOTICIAS</h2>
+        <section class="menu">
+            <article class="menuPlato"></article>
+            <article class="menuPlato"></article>
+            <article class="menuPlato"></article>
+        </section>
+    </main>
 
-        <article>
-             <img src="" alt="">
-             <img src="" alt="">
-             <img src="" alt="">
-        </article>
-        <footer>
-            <h6>Pie de Pagina</h6>
-        </footer>
+    <footer class="piepagina">
+        <h6>Pie de Pagina</h6>
+    </footer>
 
-    </header>
 </body>
 
 </html>
