--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <header class="cabecera_principal">
         <h2>PLACE TREATS</h2>
+    
+
         <nav class="menuPrincipal">
             <a href="">Inicio</a>
             <a href="">Quienes somos</a>
@@ -19,13 +21,15 @@
             <a href="">Clientes</a>
             <a href="">Contactos</a>
         </nav>
-    </header>
+    
+
     <section class="sliderprincipal">
         <img src="images/slide1.jpg" alt="Slider" title="sliderprincipal">
     </section>
+</header>
     <main>
 
-        <h2 class="h2Home">NOTICIAS</h2>
+        <h2 class="h2Home">MENÚ</h2>
         <section class="menu">
             <article class="menuPlato">
                 <img src="images/plato1.jpg" alt="plato1" title="img1">
@@ -34,24 +38,33 @@
                 <button>Ver detalle</button>
             </article>
             <article class="menuPlato">
-                <img src="images/plato1.jpg" alt="plato1" title="img1">
+                <img src="images/plato2.jpg" alt="plato1" title="img1">
                 <h3>PICANTE DE MARISCOS</h3>
                 <p>Este plato copntiene una serie de alimentos saludables ricos en proteinas.</p>
                 <button>Ver detalle</button>
             </article>
             <article class="menuPlato">
-                <img src="images/plato1.jpg" alt="plato1" title="img1">
+                <img src="images/plato3.jpg" alt="plato1" title="img1">
                 <h3>PICANTE DE MARISCOS</h3>
                 <p>Este plato copntiene una serie de alimentos saludables ricos en proteinas.</p>
                 <button>Ver detalle</button>
             </article>
         </section>
 
-        <h2 class="h2Home">NOTICIAS</h2>
+        <h2 class="h2Home">CHEFS</h2>
         <section class="menu">
-            <article class="menuPlato"></article>
-            <article class="menuPlato"></article>
-            <article class="menuPlato"></article>
+            <article class="chef1">
+                <img src="images/chef1.jpg" alt="img" title="img1">
+                <h3>PICANTE DE MARISCOS</h3>
+                <p>Este plato copntiene una serie de alimentos saludables ricos en proteinas.</p>
+                <button>Ver detalle</button>
+            </article>
+            <article class="chef2">
+                <img src="images/chef2.jpg" alt="img" title="img1">
+                <h3>PICANTE DE MARISCOS</h3>
+                <p>Este plato copntiene una serie de alimentos saludables ricos en proteinas.</p>
+                <button>Ver detalle</button>
+            </article>
         </section>
     </main>
 
