--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <LINK REL=StyleSheet HREF="css/estilo.css" TYPE="text/css" MEDIA=screen>
+    <LINK REL=StyleSheet HREF="../css/estilo.css" TYPE="text/css" MEDIA=screen>
     <title>Mi primera App</title>
 </head>
 
@@ -19,7 +19,7 @@
             <a href="">Quienes somos</a>
             <a href="">Reserva</a>
             <a href="">Clientes</a>
-            <a href="">Contactos</a>
+            <a href="internas/contactos.php">Contactos</a>
         </nav>
     
 
